--- a/frontend/src/components/Pages/Team/team.css
+++ b/frontend/src/components/Pages/Team/team.css
@@ -139,6 +139,10 @@ section .section-title {
 .teamContainer {
   margin-top: -25px;
 }
+.pagination-wrapper{
+  margin:0  auto;
+  width: 500px;
+}
 
 @media only screen and (max-width: 480px) {
   .teamContainer {
