code refactoring for page banner and breadcrumb added

--- a/frontend/src/components/Pages/AboutUs/AboutUs.css
+++ b/frontend/src/components/Pages/AboutUs/AboutUs.css
@@ -73,7 +73,7 @@
 }
 
 .aboutBanner {
-  background-image: url('../../../assests/gallery/image2.jpeg');
+  background-image: url('../../../assests/pageBanners/image4.jpeg');
 }
 
 .aboutContainer {
