--- a/frontend/src/components/Pages/Team/team.css
+++ b/frontend/src/components/Pages/Team/team.css
@@ -133,7 +133,7 @@ section .section-title {
 }
 
 .teamCover {
-  background-image: url('../../../assests/gallery/image2.jpeg');
+  background-image: url('../../../assests/pageBanners/image4.jpeg');
 }
 
 .teamContainer {
