--- a/frontend/src/components/Pages/Team/team.css
+++ b/frontend/src/components/Pages/Team/team.css
@@ -144,8 +144,18 @@ section .section-title {
   width: 500px;
 }
 
+.pagination li{
+  display: inline-block;
+  margin: 0;
+}
+
 @media only screen and (max-width: 480px) {
   .teamContainer {
     margin-top: -35px;
+  }
+
+  .pagination-wrapper{
+    width: auto;
+    padding: 0 10px;
   }
 }
