--- a/frontend/src/components/Pages/Media/Media.css
+++ b/frontend/src/components/Pages/Media/Media.css
@@ -1,9 +1,13 @@
 .newsbox
-{
+{ max-width: 500px;
+  min-width: 300px;
+  width: 95%;
   height:400px;
-  width: 32.5%;
-  margin: 2px 4px;
-  border: 2px solid wheat
+  margin: 5px 9px;
+  border: 2px solid wheat;
+  display:flex;
+  flex-direction: column;
+  text-align: center;
 }
 
 .newsbox img {
@@ -20,45 +24,72 @@ a.nostyle:link {
   cursor: auto;
 }
 .news_description
-{
-  width: 50%;
-  float: left;
-  text-align: center;
-  font-size: larger;
-  font-weight: 700;
-  margin-top: 20px;
-  margin-left: 6px;
-  cursor: pointer
+{ text-align: center;
+  cursor: pointer;
+  line-height: 0.5;
 }
 
-.date_heading {
-  font-size: 22px;
-}
-
-.image_news {
-   width: 350px !important;
-   height:190px !important
-}
-
-@media all and (min-width:0px) and (max-width: 480px) {
-  /* put your css styles in here */
-  .newsbox {
-    height: 400px;
-    width: 400px;
-    margin: 2px 22px;
-    border: 2px solid wheat;
-}
-}
-
-@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) {
-
-  .newsbox {
-    height: 521px;
-    width: 700px;
-    margin: 2px 22px;
-    border: 2px solid wheat;
-  }
-}
 .mediaBanner {
   background-image: url('../../../assests/pageBanners/image4.jpeg');
+}
+
+.newsCollection{
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  font-size: 20px;
+}
+
+.newsBoxTop{
+  width: 99%;
+  height: 30%;
+  display: flex;
+  flex-flow: row nowrap;
+  line-height: 1.13;
+}
+
+.newsBoxTopImage{
+  width:25%;
+  height: 80%;
+  padding-left: 1%;
+  padding-top: 1%;
+}
+
+.newsBoxTopImage img{
+  height: 100%;
+  width: 100%;
+}
+.newsBoxTopContent{
+  width: 75%;
+  display: flex;
+  vertical-align: middle;
+  justify-content: center;
+  flex-flow: column nowrap;
+  padding: 4%;
+}
+
+.newsBoxBottom{
+  display: flex;
+  justify-content: center;
+  width:100%;
+  height: 70%;
+}
+
+.newsBoxBottom img{
+  width: 95%;
+  height: 100%;
+  padding-bottom:5% ;
+}
+
+.newsBoxTopContent .date_heading { 
+  font-weight: 600;
+  line-height: 1.3;
+  font-size: 1.3em;
+}
+
+.newsBoxTop .news_description a{
+  font-weight: 800;
+  font-size: 1.5em;
+  line-height: 1;
 }
