--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,3 +1,6 @@
+/*  
+--uncomment to add empty space between header and main content--
+
 @media only screen and (min-width: 1366px) {
   .all-Pages-Common {
     padding-top: 10%;
@@ -21,7 +24,7 @@
     padding-top: 17%;
   }
 }
-
+*/
 /*** ESSENTIAL STYLES ***/
 .sf-menu, .sf-menu * {
 	margin: 0;
