--- a/frontend/src/components/Pages/Media/Media.css
+++ b/frontend/src/components/Pages/Media/Media.css
@@ -35,6 +35,7 @@ a.nostyle:link {
   display: flex;
   flex-flow: row nowrap;
   line-height: 1.13;
+  
 }
 
 .newsBoxTopImage{
@@ -54,7 +55,7 @@ a.nostyle:link {
   vertical-align: middle;
   justify-content: center;
   flex-flow: column nowrap;
-  margin-top: 5%;
+  padding-top: 5px;
 }
 
 .newsBoxBottom{
@@ -90,33 +91,66 @@ a.nostyle:link {
 }
 
 
-@media screen and (min-width:0px) and (max-width: 359px){
+@media screen and (min-width:0px) and (max-width: 360px){
   .newsbox
 { width: 310px;
-  height:400px;
+  height:310px;
   margin: 4px 2px;
 }
+
+.newsBoxTopContent .date_heading { 
+  font-weight: 400;
+  font-size: 1.0em;
+}
+
+.newsBoxTop .news_description a{
+  font-weight: 600;
+  font-size: 1.1em;
+  line-height: 0.9;
+}
+
 }
 @media screen and (min-width:360px) and (max-width: 414px){
   .newsbox
 { width: 360px;
-  height:400px;
-  margin: 5px 2px;
-}
-}
-@media screen and (min-width:415px) and (max-width: 719px){
-  .newsbox
-{ width: 415px;
-  height:400px;
-  margin: 6px 3px;
+  height:360px;
+  margin: 4px 4px;
 }
 
+.newsBoxTopContent .date_heading { 
+  font-weight: 600;
+  font-size: 1.1em;
+}
+
+.newsBoxTop .news_description a{
+  font-weight: 600;
+  font-size: 1.2em;
+  line-height: 0.9;
+}
+
+}
+@media screen and (min-width:414px) and (max-width: 720px){
+  .newsbox
+{ width: 415px;
+  height:414px;
+  margin: 6px 3px;
+}
+.newsBoxTopContent .date_heading { 
+  font-weight: 600;
+  font-size: 1.2em;
+}
+
+.newsBoxTop .news_description a{
+  font-weight: 600;
+  font-size: 1.3em;
+  line-height: 01;
+}
 }
 
 @media screen and (min-width:720px){
   .newsbox
 { width: 420px;
-  height:400px;
+  height:420px;
   margin: 4px 6px;
  
 }
