--- a/frontend/src/components/Pages/Media/Media.css
+++ b/frontend/src/components/Pages/Media/Media.css
@@ -2,8 +2,6 @@
 .newsbox img {
   width: 40%;
   float: left;
-  margin-left: 2px;
-  margin-top: 4px;
   height:100%;
 }
 
@@ -55,7 +53,8 @@ a.nostyle:link {
   vertical-align: middle;
   justify-content: center;
   flex-flow: column nowrap;
-  padding-top: 5px;
+  padding-top: 6px;
+  padding-left: 3px;
 }
 
 .newsBoxBottom{
@@ -66,9 +65,9 @@ a.nostyle:link {
 }
 
 .newsBoxBottom img{
-  width: 95%;
+  width: 100%;
   height: 100%;
-  padding-bottom:5% ;
+  padding: 4px; ;
 }
 
 .newsBoxTopContent .date_heading { 
@@ -91,63 +90,45 @@ a.nostyle:link {
 }
 
 
-@media screen and (min-width:0px) and (max-width: 360px){
+@media screen and (max-width: 480px){
   .newsbox
-{ width: 310px;
-  height:310px;
+{ width: 380px;
+  height:360px;
   margin: 4px 2px;
 }
 
 .newsBoxTopContent .date_heading { 
-  font-weight: 400;
-  font-size: 1.0em;
+  font-weight: 600;
+  font-size: 1.21em;
 }
 
 .newsBoxTop .news_description a{
   font-weight: 600;
-  font-size: 1.1em;
-  line-height: 0.9;
+  font-size: 1.40em;
+  line-height: 1.03;
 }
 
 }
-@media screen and (min-width:360px) and (max-width: 414px){
+
+@media screen and (min-width:480px){
   .newsbox
-{ width: 360px;
-  height:360px;
-  margin: 4px 4px;
-}
-
-.newsBoxTopContent .date_heading { 
-  font-weight: 600;
-  font-size: 1.1em;
-}
-
-.newsBoxTop .news_description a{
-  font-weight: 600;
-  font-size: 1.2em;
-  line-height: 0.9;
-}
-
-}
-@media screen and (min-width:414px) and (max-width: 800px){
-  .newsbox
-{ width: 415px;
-  height:414px;
+{ width: 450px;
+  height:420px;
   margin: 6px 3px;
 }
 .newsBoxTopContent .date_heading { 
   font-weight: 600;
-  font-size: 1.2em;
+  font-size: 1.46em;
 }
 
 .newsBoxTop .news_description a{
   font-weight: 600;
-  font-size: 1.3em;
-  line-height: 1;
+  font-size: 1.68em;
+  line-height: 1.06;
 }
 }
 
-@media screen (min-width:860px)and (max-width:1024px){
+@media screen and (min-width:768px){
   .newsbox
 { width: 480px;
   height:450px;
@@ -156,53 +137,32 @@ a.nostyle:link {
 }
 .newsBoxTopContent .date_heading { 
   font-weight: 600;
-  font-size: 1.35em;
+  font-size: 1.45em;
 }
 
 .newsBoxTop .news_description a{
   font-weight: 600;
-  font-size: 1.54em;
-  line-height: 01;
+  font-size: 1.68em;
+  line-height: 1.12;
 }
 }
 
-@media screen and (max-width:1280px){
+@media screen and (min-width:1024px){
   .newsbox
-{ width: 500px;
-  height:480px;
-  margin: 4px 6px;
- 
-}
-.newsBoxTopContent .date_heading { 
-  font-weight: 600;
-  font-size: 1.48em;
-}
-
-.newsBoxTop .news_description a{
-  font-weight: 600;
-  font-size: 1.69em;
-  line-height: 1.2;
-}
-}
-
-@media screen and (min-width:1280px){
-  .newsbox
-{ width: 520px;
+{ width: 550px;
   height:510px;
   margin: 4px 6px;
  
 }
 .newsBoxTopContent .date_heading { 
-  font-weight: 800;
+  font-weight: 600;
   font-size: 1.58em;
 }
 
 .newsBoxTop .news_description a{
-  font-weight: 800;
-  font-size: 1.70em;
-  line-height: 1.2;
+  font-weight: 600;
+  font-size: 1.87em;
+  line-height: 1.16;
 }
 }
-
-
 
