Gallery page functionality without responsive

--- a/frontend/src/components/mainGallery/mainGallery.css
+++ b/frontend/src/components/mainGallery/mainGallery.css
@@ -1,18 +1,17 @@
 .backgroundImgUrl1{
-  background-image: url(../../assests/gallery/cover_bg_1.jpg)
+  background-image: url(../../assests/gallery/image1.jpeg)
 }
 
-
 .backgroundImgUrl2{
-  background-image: url(../../assests/gallery/cover_bg_3.jpg)
+  background-image: url(../../assests/gallery/image2.jpeg)
 }
 
 .backgroundImgUrl3{
-  background-image: url(../../assests/gallery/cover_bg_1.jpg)
+  background-image: url(../../assests/gallery/image3.jpeg)
 }
 
 .backgroundImgUrl4{
-  background-image: url(../../assests/gallery/cover_bg_3.jpg)
+  background-image: url(../../assests/gallery/image4.jpeg)
 }
 
 #fh5co-portfolio {
