--- a/frontend/src/components/Pages/Gallery/Gallery.css
+++ b/frontend/src/components/Pages/Gallery/Gallery.css
@@ -1,18 +1,3 @@
-.backgroundImgUrl1 {
-  background-image: url('../../../assests/gallery/image1.jpeg');
-}
-
-.backgroundImgUrl2 {
-  background-image: url('../../../assests/gallery/image2.jpeg');
-}
-
-.backgroundImgUrl3 {
-  background-image: url('../../../assests/gallery/image3.jpeg');
-}
-
-.backgroundImgUrl4 {
-  background-image: url('../../../assests/gallery/image4.jpeg');
-}
 
 .headerContainer {
   margin-top: -25px;
@@ -28,146 +13,10 @@
   }
 }
 
-#fh5co-portfolio {
-  padding: 6em 0;
-  min-height: 500px;
-}
-@media screen and (max-width: 768px) {
-  #fh5co-portfolio {
-    padding: 3em 0;
-  }
-}
 .h3_gallery_heading {
-  font-size: 40px;
+  font-size: 3.5rem;
   font-weight: 300;
   position: relative;
-}
-#fh5co-portfolio p {
-  margin-top: 40px;
-  font-size: 20px;
-  color: #848484;
-  font-family: 'Open Sans', Arial, sans-serif;
-  margin-bottom: 40px;
-}
-#fh5co-portfolio-list {
-  flex-wrap: wrap;
-  -webkit-flex-wrap: wrap;
-  -moz-flex-wrap: wrap;
-  display: -webkit-box;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: flex;
-  position: relative;
-  float: left;
-  padding: 0;
-  margin: 0;
-  width: 100%;
-}
-#fh5co-portfolio-list li {
-  display: block;
-  padding: 0;
-  margin: 0 0 10px 1%;
-  list-style: none;
-  min-height: 400px;
-  background-position: center center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  float: left;
-  clear: left;
-  position: relative;
-}
-@media screen and (max-width: 480px) {
-  #fh5co-portfolio-list li {
-    margin-left: 0;
-  }
-}
-#fh5co-portfolio-list li a {
-  min-height: 400px;
-  padding: 2em;
-  position: relative;
-  width: 100%;
-  display: block;
-}
-#fh5co-portfolio-list li a:before {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  content: '';
-  z-index: 80;
-  -webkit-transition: 0.5s;
-  -o-transition: 0.5s;
-  transition: 0.5s;
-  background: transparent;
-}
-#fh5co-portfolio-list li a:hover:before {
-  background: rgba(0, 0, 0, 0.5);
-}
-#fh5co-portfolio-list li a .case-studies-summary {
-  width: auto;
-  bottom: 2em;
-  left: 2em;
-  right: 2em;
-  position: absolute;
-  z-index: 100;
-}
-@media screen and (max-width: 768px) {
-  #fh5co-portfolio-list li a .case-studies-summary {
-    bottom: 1em;
-    left: 1em;
-    right: 1em;
-  }
-}
-#fh5co-portfolio-list li a .case-studies-summary span {
-  text-transform: uppercase;
-  letter-spacing: 2px;
-  font-size: 13px;
-  color: rgba(255, 255, 255, 0.7);
-}
-#fh5co-portfolio-list li a .case-studies-summary h2 {
-  color: #fff;
-  margin-bottom: 0;
-}
-@media screen and (max-width: 768px) {
-  #fh5co-portfolio-list li a .case-studies-summary h2 {
-    font-size: 20px;
-  }
-}
-#fh5co-portfolio-list li.two-third {
-  width: 65.6%;
-}
-@media screen and (max-width: 768px) {
-  #fh5co-portfolio-list li.two-third {
-    width: 49%;
-  }
-}
-@media screen and (max-width: 480px) {
-  #fh5co-portfolio-list li.two-third {
-    width: 100%;
-  }
-}
-#fh5co-portfolio-list li.one-third {
-  width: 32.3%;
-}
-@media screen and (max-width: 768px) {
-  #fh5co-portfolio-list li.one-third {
-    width: 49%;
-  }
-}
-@media screen and (max-width: 480px) {
-  #fh5co-portfolio-list li.one-third {
-    width: 100%;
-  }
-}
-#fh5co-portfolio-list li.one-half {
-  width: 49%;
-}
-@media screen and (max-width: 480px) {
-  #fh5co-portfolio-list li.one-half {
-    width: 100%;
-  }
 }
 
 .heading-section-after {
@@ -180,9 +29,206 @@
   height: 2px;
   background: #ff5722;
 }
+
 .hr_style {
   width: 100px;
   background-color: #ff5722;
   height: 2px;
   margin-bottom: 45px;
+  margin-left: auto;
+  margin-right: auto;
 }
+
+/* The Modal (background) */
+.modal {
+  display: block;
+  position: fixed;
+  z-index: 1;
+  padding-top: 100px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0.1, 0.1, 0.1, 0.8);
+  -webkit-transition: 0.9s;
+  transition: all 2s ease-in 2s;
+}
+
+/* Modal Content */
+.modal-content {
+  position: relative;
+  background-color: #fefefe;
+  margin: auto;
+  padding: 0;
+  width: 90%;
+  max-width: 1200px;
+}
+
+/* The Close Button */
+.close {
+  color: #fff;
+  position: absolute;
+  top: 10px;
+  right: 25px;
+  font-size: 35px;
+  font-weight: bold;
+  opacity: 0.5 !important;
+}
+
+.close:hover,
+.close:focus {
+  color: #999;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+/* Hide the slides by default */
+.mySlides {
+  display: none;
+}
+
+/* Next & previous buttons */
+.prev,
+.next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -50px;
+  color: white;
+  font-weight: bold;
+  font-size: 20px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+  -webkit-user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover,
+.next:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* Caption text */
+.caption-container {
+  text-align: center;
+  background-color: black;
+  padding: 2px 16px;
+  color: white;
+}
+
+img.demo {
+  opacity: 0.6;
+}
+
+.active,
+.demo:hover {
+  opacity: 1;
+}
+
+img.hover-shadow {
+  transition: 0.3s;
+}
+
+.hover-shadow:hover {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.driveContainer {
+  margin-top: -25px;
+}
+
+@media only screen and (max-width: 480px) {
+  .driveContainer {
+    margin-top: -35px;
+  }
+}
+
+.commonImage {
+  max-height: 300px;
+}
+
+.singleImg {
+  float: left;
+  max-height: 300px;
+  max-width: 100%;
+  padding: 5px;
+}
+
+.imageContainer {
+  display: table;
+  overflow-x: hidden;
+}
+
+.imageContainer img:hover {
+  opacity: 0.7;
+  cursor: pointer;
+}
+
+.modalImage {
+  width: 100%;
+  overflow: none;
+}
+
+.modalCurrentSlide {
+  display: block;
+}
+
+.hideSlide {
+  display: none;
+}
+
+.galleryFilter {
+  text-align: center;
+}
+
+.galleryFilter li {
+  display: inline-block;
+  cursor: pointer;
+  padding: 10px 30px;
+  border: 1px solid darkgreen;
+  margin-left: 0;
+}
+
+.galleryFilter li:hover {
+  color: #fff;
+  background-color: darkgreen;
+}
+
+.tabActive {
+  color: #fff;
+  background-color: darkgreen;
+}
+
+.drop-label {
+  width: 150px;
+}
+
+.drop-label .caret {
+  margin-left: 5px;
+}
+
+.drop-mobile li {
+  margin-left: 0;
+  padding-left: 20px;
+}
+
+
