--- a/frontend/src/components/Pages/Gallery/Gallery.css
+++ b/frontend/src/components/Pages/Gallery/Gallery.css
@@ -43,13 +43,10 @@
 .modal {
   display: block;
   position: fixed;
-  z-index: 1;
-  padding-top: 100px;
-  left: 0;
-  top: 0;
+  z-index: 3;
+  overflow: auto;
   width: 100%;
   height: 100%;
-  overflow: auto;
   background-color: rgba(0.1, 0.1, 0.1, 0.8);
   -webkit-transition: 0.9s;
   transition: all 2s ease-in 2s;
@@ -57,12 +54,14 @@
 
 /* Modal Content */
 .modal-content {
-  position: relative;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   background-color: #fefefe;
   margin: auto;
-  padding: 0;
-  width: 90%;
-  max-width: 1200px;
+  width: fit-content;
+  height: fit-content;
 }
 
 /* The Close Button */
@@ -183,16 +182,17 @@ img.hover-shadow {
   flex-wrap: wrap;
   max-width: 100%;
 }
-scrol
+
 
 .imageContainer img:hover {
   opacity: 0.7;
   cursor: pointer;
 }
 
-.modalImage {
-  width: 100%;
-  overflow: none;
+.modalImage{
+  max-width: 100%;
+  max-height: 100%;
+  overflow: auto;
 }
 
 .modalCurrentSlide {
